www/docs/en/1.6.0/cordova/geolocation/geolocation.md
---
license: >
    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.
---

Geolocation
===========

> The `geolocation` object provides access to the device's GPS sensor. 

Geolocation provides location information for the device, such as latitude and longitude. Common sources of location information include Global <a href="Position/position.html">Position</a>ing System (GPS) and location inferred from network signals such as IP address, RFID, WiFi and Bluetooth MAC addresses, and GSM/CDMA cell IDs. No guarantee is given that the API returns the device's actual location. 

This API is based on the [W3C Geo location API Specification](http://dev.w3.org/geo/api/spec-source.html).  Some devices already provide an implementation of this spec.  For those devices, the built-in support is used instead of replacing it with Cordova's implementation.  For devices that don't have geolocation support, Cordova's implementation should be compatible with the W3C specification.

Methods
-------

- geolocation.getCurrent<a href="Position/position.html">Position</a>
- geolocation.watch<a href="Position/position.html">Position</a>
- <a href="geolocation.clearWatch.html">geolocation.clearWatch</a>


Arguments
---------

- <a href="parameters/geolocationSuccess.html">geolocationSuccess</a>
- <a href="parameters/geolocationError.html">geolocationError</a>
- <a href="parameters/geolocation.options.html">geolocationOptions</a>

Objects (Read-Only)
-------------------

- <a href="Position/position.html">Position</a>
- <a href="<a href="Position/position.html">Position</a>Error/positionError.html"><a href="Position/position.html">Position</a>Error</a>
- <a href="Coordinates/coordinates.html">Coordinates</a>
